--- a/satyam.html
+++ b/satyam.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Satyam Don...</h1>
+    <h1>Prateek Big Don...</h1>
+    <h1>Addii sabse chota don...</h1>
 </body>
 </html>
