--- a/satyam.html
+++ b/satyam.html
@@ -13,7 +13,8 @@
 
 header {
     display: flex;
-    height: 80px; 
+    height: 5rem; 
+    width: 100%;
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid #b6b1b1;
